Fix scrollbar color for cardano and light blue theme in cardano node status

--- a/source/renderer/app/components/status/DaedalusDiagnostics.scss
+++ b/source/renderer/app/components/status/DaedalusDiagnostics.scss
@@ -387,12 +387,3 @@
     width: 36px;
   }
 }
-
-*::-webkit-scrollbar-thumb {
-  background-color: var(--theme-splash-network-scrollbar-thumb-background);
-  &:hover {
-    background-color: var(
-      --theme-splash-network-scrollbar-thumb-background-hover
-    );
-  }
-}
